# Stereomatcher

./: CMakeLists.txt  auswertung_disparity.xlsx  bm_test.m
Ausarbeitung/: ausarbeitung.kilepr  mrmthesis.cls  my_mrmthesis.aux  my_mrmthesis.bbl  my_mrmthesis.bcf  my_mrmthesis.bib  my_mrmthesis.bib.bak  my_mrmthesis.bib.blg  my_mrmthesis.blg  my_mrmthesis.dvi  my_mrmthesis.run.xml  my_mrmthesis.tex  my_mrmthesis.toc
Ausarbeitung/.kile/: ausarbeitung.kilepr.gui
Ausarbeitung/Vorlage/mrmthesis_v1.9b_20180822_Fix/: my_mrmthesis.tex
Ausarbeitung/Vorlage/mrmthesis_v1.9b_20180822_Fix/doc/: commands.tex
Ausarbeitung/Vorlage/mrmthesis_v1.9b_20180822_Fix/img/: unilogo_bild.eps
Ausarbeitung/doc/: backgroundsubtraction.tex  calibration.tex  car_detection.tex  classification.tex  datasets.tex  evaluation_background.tex  evaluation_stereo.tex  imageprocessing.tex  segmentation.tex  stereocomputation.tex
Ausarbeitung/img/: unilogo_wort.eps
Ausarbeitung/media/: pipeline.docx
Ausarbeitung/media/filter/: boxfilter.docx
Ausarbeitung/media/morph/: morph_all.docx  morph_base.docx  morph_closing.docx  morph_dilate.docx  morph_erode.docx  morph_opening.docx
MATLAB/: plane.m  postprocess.m  stereo_results.m
OpenGL/: Camera.h  VertexShader.glsl  main.cpp
codes/: analyse_gt.py  box_fitting.cpp  box_fitting.h  box_fitting_lib.cpp  box_fitting_lib.h  rect_params.py  rect_test.py
codes/classification/: ClassResult.py  ClusterResult.py  classify_result.py  gt_class.json  result_class.json  result_cluster.json  test_class1.json  test_class2.json  test_class3.json  traindata.txt  traindata2.txt  traindata_raw.txt  validate_result.py
inc/: BasicBlockmatcher.h  BasicSGMatcher.h  Camera.h  ConfigDef.h  EvaluateBPP.h  FileGT.h  IBackgroundSubtraction.h  IImageLoader.h  IPostprocessing.h  IPreprocessing.h  ISegmentation.h  IStereoEvaluation.h  IStereoMatch.h  ImageControl.h  ImageHandler.h  SegmentationHelper.h
inc/bgsubtraction/: CustomFrameDifference.h  CustomPixelBasedAdaptiveSegmenter.h
inc/evaluation/: EvaluateBPP.h  EvaluateRMS.h
inc/imageloader/: BaseImageloader.h  CustomImageloader.h  SkipImageloader.h
inc/opengl/: Camera.h
inc/postprocess/: BasePostprocessor.h  PostInterpolation.h
inc/preprocess/: BasePreprocessor.h  PreprocessMask.h
inc/segmentation/: DBSCAN.h  PCLSegmentation.h  RegionGrowing.h  TwoStepSegmentation.h
inc/stereomatch/: BasicBPMatcher.h  BasicBlockMatcher.h  BasicBlockmatcher.h  BasicSGMatcher.h  CustomAdaptiveMatcher.h  CustomBlockCannyMatcher.h  CustomBlockMatcher.h  CustomCannyMatcher.h  CustomDiffMatcher.h  CustomMultiBoxMatcher.h  CustomPyramidMatcher.h
results/: class_bm_scene1.json  class_bm_scene2.json  class_bm_scene3.json  class_bm_scene4.json  cluster_bm_scene1.json  cluster_bm_scene2.json  cluster_bm_scene3.json  cluster_bm_scene4.json  gt_scene1.json  gt_scene2.json  gt_scene3.json  gt_scene4.json
src/: BackgroundSubtraction.cpp  BasePostprocessor.cpp  BasePreprocessor.cpp  BasicBlockmatcher.cpp  BasicSGMatcher.cpp  CreateGT.cpp  CustomBackgroundSubtraction.cpp  CustomBlockmatcher.cpp  EvalBackground.cpp  EvalDisparity.cpp  EvaluateBPP.cpp  EvaluateRMS.cpp  FileGT.cpp  ImageControl.cpp  ImageHandler.cpp  KittiImprovement.cpp  KittyImprovement.cpp  OpenGL.cpp  OpenGLApp.cpp  PerspectiveTransform.cpp  PyramidBlockMatcher.cpp  PyramidBlockmatcher.cpp  SegmentationHelper.cpp  Stereocalibrate.cpp  Stereomatcher.cpp  Stereorectify.cpp  TestBaseImageloader.cpp  TestPCL.cpp  TestStereoKitty.cpp  Testviz.cpp  TwoStepSegmentation.cpp  VisualizeSegmentation.cpp  dbscan.cpp  main.cpp
src/bgsubtraction/: CustomFrameDifference.cpp  CustomPixelBasedAdaptiveSegmenter.cpp
src/evaluation/: EvaluateBPP.cpp  EvaluateRMS.cpp
src/imageloader/: BaseImageloader.cpp  CustomImageloader.cpp  SkipImageloader.cpp
src/opengl/: Camera.cpp
src/postprocess/: BasePostprocessor.cpp  PostInterpolation.cpp
src/preprocess/: BasePreprocessor.cpp  PreprocessMask.cpp
src/segmentation/: DBSCAN.cpp  PCLSegmentation.cpp  RegionGrowing.cpp  TwoStepSegmentation.cpp
src/stereomatch/: BasicBPMatcher.cpp  BasicBlockMatcher.cpp  BasicBlockmatcher.cpp  BasicSGMatcher.cpp  CustomAdaptiveMatcher.cpp  CustomBlockCannyMatcher.cpp  CustomBlockMatcher.cpp  CustomCannyMatcher.cpp  CustomDiffMatcher.cpp  CustomMultiBoxMatcher.cpp  CustomPyramidMatcher.cpp
